# GovDoc

./: .dockerignore  .gitignore  README.md
.circleci/: config.yml
Backend/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.runtime.txt
Backend/app/: main.py
Backend/app/api/routers/: chat.py  cloudinary.py  documents.py  health.py  llm.py  query.py
Backend/app/db/: connection.py  schema.sql
Backend/app/graphs/: import_graph.py  query_graph.py  state.py
Backend/app/llm/: prompts.py  router.py
Backend/app/nodes/: chunk.py  embed.py  generate.py  rerank.py  rewrite.py  scan.py  search.py  store.py
Backend/app/services/: chat_service.py  cloudinary_service.py  embedding_service.py  health_service.py  import_service.py  llm_service.py  query_service.py
Backend/app/utils/: logger.py  settings.py  text_utils.py  validators.py
Backend/feature_engineering/: cleaner.py  embedder.py  enricher.py  ingest.py  load_dataset.py  pipeline.py  splitter.py
Backend/scripts/: sync_runtime_requirements.py
Backend/tests/: test_api.py  test_llm_router.py
Data/: README.md  docker-compose.yml
Data/init/: 01-enable-vector.sql
Devops/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.gateway.conf
Devops/scripts/: ensure-env.sh
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.css  App.tsx  env.d.ts  index.css
Frontend/src/api/: homeApi.ts  workspaceApi.ts
Frontend/src/hooks/: useWorkspaceState.ts
Frontend/src/mockdata/: homeMockData.ts  workspaceMockData.ts
(+18 files in other folders)
