[project]
name = "govdoc-backend"
version = "0.1.0"
description = "GovDoc Intellisense backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.20",
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  "python-multipart>=0.0.9",
  "orjson>=3.10.0",
  "structlog>=24.4.0",
  "numpy>=2.0.0",
  "qdrant-client>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
